--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -19,7 +19,7 @@ jobs:
         echo "$EC2_SSH_KEY" > ssh_key.pem
         chmod 600 ssh_key.pem
         ssh -o StrictHostKeyChecking=no -i ssh_key.pem root@$EC2_HOST << 'EOF'
-          cd /path/to/your/project
+          cd /root/github/nodeapp
           git pull origin main
           npm install
           node server.js &
