--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -16,7 +16,7 @@ jobs:
         EC2_HOST: "ec2-13-201-188-227.ap-south-1.compute.amazonaws.com"
         EC2_USER: "ubuntu"
       run: |
-        # Save the private key to a file
+        # Save the private key to a fileee
         echo "$EC2_SSH_KEY" > blasbloom.pem
         chmod 600 blasbloom.pem
 
