--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -25,7 +25,7 @@ jobs:
 
         # Connect to EC2 and deploy
         ssh -T -i blasbloom.pem $EC2_USER@$EC2_HOST << 'EOF'
-          cd /var/www/nodeapp
+          cd /root/github/nodeapp
           git pull origin main
           npm install
           pm2 stop all || true
