--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -21,7 +21,7 @@ jobs:
         chmod 600 blasbloom.pem
 
         # Add host key to known_hosts
-        ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
+        ssh-keyscan -H $EC2_HOST >> ~/root/.ssh/known_hosts
 
         # Connect to EC2 and deploy
         ssh -T -i blasbloom.pem $EC2_USER@$EC2_HOST << 'EOF'
