--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -14,7 +14,7 @@ jobs:
       env:
         EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
         EC2_HOST: "ec2-13-201-188-227.ap-south-1.compute.amazonaws.com"
-        EC2_USER: "ubuntu"
+        EC2_USER: "root"
       run: |
         # Save the private key to a file
         echo "$EC2_SSH_KEY" > blasbloom.pem
