--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,37 +1,49 @@
-name: Deploy to AWS EC2
+name: Deploy to EC2
 
 on:
   push:
     branches:
-      - main
+      - main  # This triggers the workflow on pushing to the main branch
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
 
     steps:
-    - name: Deploy via SSH
+    - name: Checkout code
+      uses: actions/checkout@v3  # Check out the code from the repository
+
+    - name: Set up SSH and deploy to EC2
       env:
-        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
-        EC2_HOST: "ec2-13-201-188-227.ap-south-1.compute.amazonaws.com"
-        EC2_USER: "root"
+        EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}  # GitHub secret for private key
+        EC2_HOST: ec2-13-201-188-227.ap-south-1.compute.amazonaws.com  # Your EC2 instance address
+        EC2_USER: root  # Use root user for SSH
       run: |
-        # Save the private key to a file
-        echo "$EC2_SSH_KEY" > blasbloom.pem
-        chmod 600 blasbloom.pem
+        # Create the .ssh directory and set permissions
+        mkdir -p ~/.ssh
+        chmod 700 ~/.ssh
 
-        # Add host key to known_hosts
-        ssh-keyscan -H $EC2_HOST >> ~/root/.ssh/known_hosts
+        # Save the private key to a file and set permissions
+        echo "$EC2_SSH_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
 
-        # Connect to EC2 and deploy
-        ssh -T -i blasbloom.pem $EC2_USER@$EC2_HOST << 'EOF'
+        # Add the EC2 host to known_hosts to prevent SSH warning
+        ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
+
+        # SSH into EC2 and deploy
+        ssh -T -i ~/.ssh/id_rsa $EC2_USER@$EC2_HOST << 'EOF'
+          # Navigate to the app directory (create if not exists)
+          cd /root/github/nodeapp || mkdir -p /root/github/nodeapp
           cd /root/github/nodeapp
+
+          # Pull the latest code from GitHub
           git pull origin main
+
+          # Install dependencies (if any)
           npm install
+
+          # Restart the Node.js app with pm2
           pm2 stop all || true
           pm2 start server.js --name nodeapp
         EOF
-
-        # Cleanup
-        rm -f blasbloom.pem
 
