--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -42,6 +42,9 @@ jobs:
           # Switch to root user
           sudo su -
 
+          # Install pm2 globally if not installed
+          npm install -g pm2
+
           # Navigate to the app directory (create if not exists)
           cd /root/github/nodeapp || mkdir -p /root/github/nodeapp
           cd /root/github/nodeapp
