--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
       - run:
           name: SSH into EC2 and Deploy
           command: |
-            ssh -o StrictHostKeyChecking=no -i ~/ec2_key.pem ubuntu@$EC2_HOST << EOF
+            ssh -o StrictHostKeyChecking=no -i ~/ec2_key.pem ubuntu@$EC2_HOST \<< EOF
               # Switch to root user
               sudo su -
 
