--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   node-executor:
     docker:
-      - image: circleci/python:3.8  # Base image, can use other images
+      - image: circleci/python:3.8  # Base image
     working_directory: ~/repo
 
 jobs:
@@ -31,7 +31,8 @@ jobs:
       - run:
           name: SSH into EC2 and Deploy
           command: |
-            ssh -o StrictHostKeyChecking=no -i ~/ec2_key.pem ubuntu@$EC2_HOST \<< EOF
+            # Add verbose flag for SSH debugging
+            ssh -v -o StrictHostKeyChecking=no -i ~/ec2_key.pem ubuntu@$EC2_HOST \<< EOF
               # Switch to root user
               sudo su -
 
